# neat

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  readme.txt
src/genetics/: connection_gene.rs  gene.rs  genome.rs  mod.rs  node_gene.rs  util.rs
src/mutation/: mod.rs  mutate.rs  mutations.rs
src/neural_network/: feed_forward.rs  mod.rs  node.rs
src/population/: mod.rs  population.rs
src/speciation/: mod.rs  species.rs
src/test_environments/: mod.rs  xor.rs
src/util/: activation_funcs.rs  mod.rs  thread_pool.rs  vecset.rs
