[package]
name = "neat-from-scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.4"
ndarray="0.15.4"
snake= {path = "C:\\Users\\joegr\\Documents\\rust-projects\\snake-piston"}
gym-rs="0.2.1"
async-rwlock="1.3.0"